###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.16.0", repo_name = "com_google_googletest")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "abseil-cpp", version = "20250127.1", repo_name = "com_google_absl")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "glog", version = "0.6.0")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "bazel_jar_jar", version = "0.1.12")
bazel_dep(name = "rules_pkg", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(
    # Use python.defaults if you have defined multiple toolchain versions.
    python_version = "3.9",
    python_version_env = "BAZEL_PYTHON_VERSION",
)

# The default toolchain to use if nobody configures a toolchain.
# NOTE: This is not a stable version. It is provided for convenience, but will
# change frequently to track the most recent Python version.
# NOTE: The root module can override this.
python.toolchain(
    is_default = True,
    python_version = "3.9",
)
